@@ -1,9 +1,8 @@
 package tutorialquestions.questionb33f;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Optional;
+import java.util.Set;
 
 public class Demo {
 
@@ -17,21 +16,15 @@ public class Demo {
 
     final Logger stderrLogger = (logLevel, message) -> {
       switch (logLevel) {
-        case FATAL:
-        case ERROR:
-        case WARNING:
-          System.err.print("*** IMPORTANT ***\n");
-          break;
-        default:
-          System.err.print("* NOTE *\n");
-          break;
+        case FATAL, ERROR, WARNING -> System.err.print("*** IMPORTANT ***\n");
+        default -> System.err.print("* NOTE *\n");
       }
       System.err.println(message);
     };
 
     final StringInspector lineTooLongInspector =
             (item -> item.length() > MAX_LINE_SIZE
-                    ? Optional.of(new ImmutablePair<LogLevel, String>(
+                    ? Optional.of(new ImmutablePair<>(
                             LogLevel.ERROR, "Line too long: " + item))
                     : Optional.empty());
 
@@ -45,8 +38,8 @@ public class Demo {
     final FileInspector inspector3 = new FileInspector(fileLogger2);
 
     final KnownWordsStringInspector knownWordsInspector = new KnownWordsStringInspector(
-            new HashSet<String>(Arrays.asList("goto", "finalize", "static")),
-            new HashSet<String>(Arrays.asList("continue", "break"))
+            Set.of("goto", "finalize", "static"),
+            Set.of("continue", "break")
     );
 
     System.err.println("Starting inspection 1:");
